Closed
Bug 572571
Opened 15 years ago
Closed 14 years ago
"ASSERTION: FBO not supported" and "ASSERTION: nsCARenderer::Render failure"
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(firefox7 fixed)
RESOLVED
FIXED
mozilla7
| Tracking | Status | |
|---|---|---|
| firefox7 | --- | fixed |
People
(Reporter: jruderman, Assigned: BenWa)
References
Details
(Keywords: assertion, testcase)
Attachments
(5 files)
Using a debug build on Mac OS X 10.6:
###!!! ASSERTION: FBO not supported: 'Error', file /Users/jruderman/mozilla-central/gfx/src/thebes/utils/nsCoreAnimationSupport.mm, line 541
###!!! ASSERTION: nsCARenderer::Render failure: 'Not Reached', file /Users/jruderman/mozilla-central/layout/generic/nsObjectFrame.cpp, line 3671
| Reporter | ||
Comment 1•15 years ago
|
||
This is plugins, I believe -- don't think we use CA for anything other than OOPP in the browser.
Component: Graphics → Plug-ins
QA Contact: thebes → plugins
| Assignee | ||
Comment 3•15 years ago
|
||
Yup, it's a problem with the 'Core Animation' drawing model for plug-ins.
Jesse can you include your Graphic Card information?
Assignee: nobody → b56girard
| Reporter | ||
Comment 4•15 years ago
|
||
QuickTime Plug-in 7.6.6
NVIDIA GeForce 9400
| Reporter | ||
Comment 5•15 years ago
|
||
| Assignee | ||
Comment 6•15 years ago
|
||
I looked into the problem further and assumed that TEXTURE_RECTANGLE was not supported. From what I gather from the CGLTexImageIOSurface2D requires the use of TEXTURE_RECTANGLE so we might have no choice but to use it for IOSurface.
Jesse can you see if you have "OpenGL Driver Monitor" installed. Select 'Monitors', "Renderer Info" from the menu bar. Select 'Save As Text' and attach it? I'm interested in seeing what support is provided TEXTURE_RECTANGLE.
| Reporter | ||
Comment 7•15 years ago
|
||
Here you go, BenWa. (I clicked "Expand All" before clicking "Save As Text".)
| Assignee | ||
Comment 8•15 years ago
|
||
It just occurred to me that the Quicktime's object frame had a width of 20,000. Core Animation, or at least the CARenderer, doesn't even support anything this large:
-[<OOPMovieLayer: 0x2f57b00> display]: Ignoring bogus layer size (20000.000000, 150.000000)
Chromium has the same error.
roc thinks that we should just render nothing, which I agree with, which is the behavior I currently get. The only problem is that the code keeps trying to initialize and this is draining the CPU so I will post a patch for this.
If someone thinks the expect behavior should be otherwise let me know.
| Assignee | ||
Comment 9•15 years ago
|
||
This patch prevents the caller from trying to initialize the nsCARenderer again if we know that this size is unsupported.
Attachment #461952 -
Flags: review?(joshmoz)
Attachment #461952 -
Flags: review?(joshmoz) → review+
| Assignee | ||
Comment 10•14 years ago
|
||
Checked the patch for bit-rot, still working. Checkin-needed.
Keywords: checkin-needed
Updated•14 years ago
|
Status: NEW → ASSIGNED
Comment 11•14 years ago
|
||
Comment 12•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Hardware: x86 → All
Resolution: --- → FIXED
Whiteboard: [inbound]
| Assignee | ||
Updated•14 years ago
|
status-firefox7:
--- → fixed
Comment 13•14 years ago
|
||
How can this be verified? Can you please provide some STR.
Thanks
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•