Bug 572571 - Abort Core Animation rendering for windows that are too large. r=josh