gfx/thebes/nsCoreAnimationSupport.h
@@ -58,7 +58,8 @@ class THEBES_API nsCARenderer {
 public:
   nsCARenderer() : mCARenderer(nsnull), mPixelBuffer(nsnull), mOpenGLContext(nsnull),
                    mCGImage(nsnull), mCGData(nsnull), mIOSurface(nsnull), mFBO(nsnull),
-                   mIOTexture(nsnull) {}
+                   mIOTexture(nsnull), 
+                   mUnsupportedWidth(UINT32_MAX), mUnsupportedHeight(UINT32_MAX) {}
   ~nsCARenderer();
   nsresult SetupRenderer(void* aCALayer, int aWidth, int aHeight);
   nsresult Render(int aWidth, int aHeight, CGImageRef *aOutCAImage);
@@ -85,6 +86,8 @@ private:
   nsIOSurface       *mIOSurface;
   uint32_t           mFBO;
   uint32_t           mIOTexture;
+  uint32_t           mUnsupportedWidth;
+  uint32_t           mUnsupportedHeight;
 };
 
 typedef uint32_t IOSurfaceID;
